--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<groupId>de.chrgroth.smartcron</groupId>
 	<artifactId>smartcron</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	
 	<name>smartcron</name>
 	<description>Simple API to provide dynamic scheduling.</description>
