--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 jdk:
 - oraclejdk8
+cache:
+  directories:
+  - $HOME/.m2
 script: mvn clean package
 after_success:
 - mvn clean cobertura:cobertura coveralls:report
@@ -9,4 +12,3 @@ notifications:
     on_failure: always
     on_success: always
     secure: ENQikp7i99Mk3pSNn5av5iFkh0/AN5VddItgARHbR4jFYUeXF9XWLxG8+RxtNL2aqLp3hzA2bOHwS3zPao0Kx/l2V+2e2F2/oYOCQg2Q4teRiiP10za5uwzT92DQ6KGn6GbSRPH19B2LuD9/tLrZdwZ8k2iaKtcgoGTov27Z9gU=
-email: chr.groth@gmx.de
